--- a/client/main.html
+++ b/client/main.html
@@ -4,6 +4,9 @@
 	<title>Armbreaker Frontend</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.2/moment.min.js"></script>
+	<script src="utility.js"></script>
+	<script src="js-levenshtein.js"></script>
+	<script src="damerau-levenshtein.js"></script>
 	<script src="main.js"></script>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -17,6 +20,15 @@
 			<g class="sparkline"></g>
 			<g class="axes">
 				<g class="xaxis"></g>
+				<g class="yaxis"></g>
+			</g>
+			<g class="bars"></g>
+			<g class="tooltip tooltiptext"></g>
+		</g>
+	</svg>
+	<svg id="userview" width="800" height="530">
+		<g class="all">
+			<g class="axes">
 				<g class="yaxis"></g>
 			</g>
 			<g class="bars"></g>
