User list. Improved readability for userlike.

--- a/client/main.html
+++ b/client/main.html
@@ -13,27 +13,50 @@
 </head>
 <body>
 	<div id="title"><h1></h2></div>
-	<h2>Likes per day</h2>
-	<svg id="perdayview" width="800" height="430">
-		<rect height="430" width="800" style="fill:rgba(255,255,255,0)"></rect>
-		<g class="all">
-			<g class="sparkline"></g>
-			<g class="axes">
-				<g class="xaxis"></g>
-				<g class="yaxis"></g>
+	<div id="perdayviewdiv">
+		<h2>Likes per day</h2>
+		<svg id="perdayview" width="800" height="430">
+			<rect height="430" width="800" style="fill:rgba(255,255,255,0)"></rect>
+			<g class="all">
+				<g class="sparkline"></g>
+				<g class="axes">
+					<g class="xaxis"></g>
+					<g class="yaxis"></g>
+				</g>
+				<g class="bars"></g>
+				<g class="tooltip tooltiptext"></g>
 			</g>
-			<g class="bars"></g>
-			<g class="tooltip tooltiptext"></g>
-		</g>
-	</svg>
-	<svg id="userview" width="800" height="530">
-		<g class="all">
-			<g class="axes">
-				<g class="yaxis"></g>
-			</g>
-			<g class="bars"></g>
-			<g class="tooltip tooltiptext"></g>
-		</g>
-	</svg>
+		</svg>
+	</div>
+	<div>
+		<h2>User like patterns</h2>
+		<div id="userviewdiv" class="userviewdivs">
+			<svg id="userview" width="600" height="650">
+				<g class="all">
+					<g class="axes">
+						<g class="yaxis"></g>
+					</g>
+					<g class="bars"></g>
+					<g class="boxes"></g>
+				</g>
+			</svg>
+		</div>
+		<div id="userlistdiv" class="userviewdivs" style="color: rgba(0,0,0,0)">
+			<h2>Usernames</h2>
+			<table>
+				<tr>
+					<td>Users:</td>
+					<td><span id="numusers"></span></td>
+					<td>(<span id="percentusers"></span>% total)</td>
+				</tr>
+				<tr>
+					<td>Av. likes:</td>
+					<td><span id="averagelikes"></span></td>
+					<td>(<span id="percentliked"></span>% chapters)</td>
+				</tr>
+			</table>
+			<div id="userlist"></div>
+		</div>
+	</div>
 </body>
 </html>
