Add subgraph for userlikes

--- a/client/main.html
+++ b/client/main.html
@@ -38,11 +38,12 @@
 					</g>
 					<g class="bars"></g>
 					<g class="boxes"></g>
+					<g class="likegraph"></g>
 				</g>
 			</svg>
 		</div>
 		<div id="userlistdiv" class="userviewdivs" style="color: rgba(0,0,0,0)">
-			<h2>Usernames</h2>
+			<h2>Details</h2>
 			<table>
 				<tr>
 					<td>Users:</td>
