Added binning for view 1 (daily view)

--- a/client/main.html
+++ b/client/main.html
@@ -10,6 +10,7 @@
 	<script src="main.js"></script>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<meta charset="utf-8">
 </head>
 <body>
 	<div id="title"><h1></h2></div>
@@ -27,6 +28,9 @@
 				<g class="tooltip tooltiptext"></g>
 			</g>
 		</svg>
+		<div id="bincontrols">
+			<input type="text" id="binsize" value="1"> days <button id="setbinsize">Update</button>
+		</div>
 	</div>
 	<div>
 		<h2>User like patterns</h2>
