Can now pan view3

--- a/client/main.html
+++ b/client/main.html
@@ -69,8 +69,11 @@
 		<div id="firstimpressionsdiv">
 			<h2>First Impressions</h2>
 			<svg id="firstimpressionview" width="800" height="650">
+				<rect class="drag_hitbox" width="800" height="650"></rect>
 				<g class="all">
-					<g class="marks"></g>
+					<g class="marks_drag">
+						<g class="marks"></g>
+					</g>
 					<g class="axes">
 						<g class="xaxis"></g>
 						<g class="yaxis"></g>
