--- a/client/main.html
+++ b/client/main.html
@@ -4,13 +4,13 @@
 	<title>Armbreaker Frontend</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.2/moment.min.js"></script>
-	<script src="utility.js"></script>
-	<script src="js-levenshtein.js"></script>
-	<script src="damerau-levenshtein.js"></script>
-	<script src="d3.slider/d3.slider.js"></script>
-	<script src="main.js"></script>
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="stylesheet" type="text/css" href="d3.slider/d3.slider.css" media="screen" />
+	<script src="../src/utility.js"></script>
+	<script src="../src/js-levenshtein.js"></script>
+	<script src="../src/damerau-levenshtein.js"></script>
+	<script src="../src/d3.slider/d3.slider.js"></script>
+	<script src="../src/main.js"></script>
+	<link rel="stylesheet" type="text/css" href="../src/main.css">
+	<link rel="stylesheet" type="text/css" href="../src/d3.slider/d3.slider.css" media="screen" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<meta charset="utf-8">
 </head>
