--- a/client/main.html
+++ b/client/main.html
@@ -37,39 +37,41 @@
 		</div>
 		<div id="userviewcontainer">
 			<h2>User like patterns</h2>
-			<div id="userviewdiv" class="userviewdivs">
-				<svg id="userview" width="600" height="650">
-					<g class="all">
-						<g class="axes">
-							<g class="yaxis"></g>
+			<div id="userview_centercontainer">
+				<div id="userviewdiv" class="userviewdivs">
+					<svg id="userview" width="600" height="650">
+						<g class="all">
+							<g class="axes">
+								<g class="yaxis"></g>
+							</g>
+							<g class="bars"></g>
+							<g class="boxes"></g>
+							<g class="likegraph"></g>
 						</g>
-						<g class="bars"></g>
-						<g class="boxes"></g>
-						<g class="likegraph"></g>
-					</g>
-				</svg>
-			</div>
-			<div id="userlistdiv" class="userviewdivs" style="color: rgba(0,0,0,0)">
-				<h2>Details</h2>
-				<table>
-					<tr>
-						<td>Users:</td>
-						<td><span id="numusers"></span></td>
-						<td>(<span id="percentusers"></span>% total)</td>
-					</tr>
-					<tr>
-						<td>Av. likes:</td>
-						<td><span id="averagelikes"></span></td>
-						<td>(<span id="percentliked"></span>% chapters)</td>
-					</tr>
-				</table>
-				<div id="userlist"></div>
+					</svg>
+				</div>
+				<div id="userlistdiv" class="userviewdivs" style="color: rgba(0,0,0,0)">
+					<h2>Details</h2>
+					<table>
+						<tr>
+							<td>Users:</td>
+							<td><span id="numusers"></span></td>
+							<td>(<span id="percentusers"></span>% total)</td>
+						</tr>
+						<tr>
+							<td>Av. likes:</td>
+							<td><span id="averagelikes"></span></td>
+							<td>(<span id="percentliked"></span>% chapters)</td>
+						</tr>
+					</table>
+					<div id="userlist"></div>
+				</div>
 			</div>
 		</div>
 		<div id="firstimpressionsdiv">
 			<h2>First Impressions</h2>
-			<svg id="firstimpressionview" width="800" height="650">
-				<rect class="drag_hitbox" width="800" height="650"></rect>
+			<svg id="firstimpressionview" width="800" height="350">
+				<rect class="drag_hitbox" width="800" height="350"></rect>
 				<g class="all">
 					<g class="marks_drag">
 						<g class="marks"></g>
@@ -80,6 +82,7 @@
 					</g>
 				</g>
 			</svg>
+			<div id="firstimpressions_binslider"></div>
 		</div>
 	</div>
 </body>
